# Curso-Data-Engineering

./: .cursorignore  .flake8  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  CHECKLIST_JAR-200.md  CLAUDE.md  COMPLETADO_JAR-180.md  ORDEN_DE_IMPLEMENTACION.md  README.md  README_WEB_APP.md  REGLAS_CRITICAS_AGENTES.md  REPORTE_CALIDAD_JAR-200.md  RESUMEN_MEJORAS_JAR-180.md  RESUMEN_REVISION_PEDAGOGICA_JAR-180.md  REVISION_BOT_PR-1.md  agent.md  data_engineer_game.py  docker-compose.web.yml  docker-compose.yml  game_save.json  pyproject.toml  requirements.txt
.cursor/: README.md
.cursor/.agent-tools/: pr_body.md  pr_body_jar_185.md  testing_jar_180.md
.cursor/commands/: README.md  aplicar-reorganizacion.mjs  development.md  documentation.md  game-design.md  infrastructure.md  project-management.md  quality.md  revisar-arquitectura.mjs  teaching.md
.github/: PR_BODY_JAR187.md
.github/workflows/: ci.yml  codeql.yml  pr-checks.yml
airflow/dags/: .gitkeep
airflow/plugins/: .gitkeep
backend/: .env.example  .gitignore  Dockerfile  requirements.txt  run.sh
backend/app/: __init__.py  config.py  database.py  main.py
documentacion/: CHANGELOG.md  DISENO_WEB_APP.md  ENV_EXAMPLE.md  GUIA_INSTALACION.md  PROGRAMA_MASTER.md  PROYECTOS_PRACTICOS.md  README.md  RECURSOS.md  RESUMEN_JAR-200.md  RESUMEN_JUEGO.md  SISTEMA_EVALUACION_CALIDAD.md
documentacion/guias/: GUIA_CI_CD.md  GUIA_COMANDOS_ARQUITECTURA.md  GUIA_QUALITY_CHECK.md
documentacion/jira/: ACTUALIZACION_DOCUMENTACION_JAR-183.md  ANALISIS_RETROSPECTIVO_JAR-187.md  CICLO_COMPLETO_JAR-183.md  DISENO_JAR-184.md  DISENO_MISION_3_JAR-181.md  DISENO_MISION_4_JAR-182.md  DISENO_MISION_5_JAR-183.md  METRICAS_PROYECTO_JUEGO.md  PLANIFICACION_JAR-192.md  PLANIFICACION_JAR-192_TEMA2.md  REPORTE_CALIDAD_JAR-180.md  REPORTE_CALIDAD_JAR-187.md  REPORTE_CALIDAD_QUALITY_CHECK.md  REPORTE_DOCUMENTACION_JAR-187.md  REPORTE_DOCUMENTACION_JAR-192_TEMA1.md  REPORTE_DOCUMENTACION_JAR-192_TEMA2.md  REPORTE_DOCUMENTACION_JAR-200.md  REPORTE_FINALIZACION_JAR-187.md  REPORTE_FINAL_JAR-191.md  REPORTE_JAR-191_PROGRESO.md  REPORTE_TESTING_COMPLETO_JAR-183.md  REPORTE_TESTING_JAR-181.md  REPORTE_TESTING_JAR-183.md  RESUMEN_FINAL_JAR-183.md  RESUMEN_IMPLEMENTACION_JAR-183.md  RESUMEN_JAR-183.md  RESUMEN_JAR-184.md  REVISION_PEDAGOGICA_MISION_4_JAR-182.md  REVISION_UX_UI_MISION_5_JAR-183.md  VALIDACION_PEDAGOGICA_JAR-191.md
documentacion/juego/: EMPRESAS_FICTICIAS.md  README_JUEGO.md  README_JUEGO_WEB.md  REVISION_PEDAGOGICA_MISION_2.md  REVISION_UX_UI_GAME.md  data_engineer_game.py  game.html
documentacion/reportes/: REPORTE_REVISION_FINAL_PR-1.md  REVISION_BOT_PR-1.md
evaluaciones/: .gitignore  README.md  __init__.py  generar_certificado.py  requirements.txt  tracking_progreso.py
evaluaciones/examenes/: modulo-01-examen.md  modulo-02-examen.md  modulo-03-examen.md  modulo-04-examen.md  modulo-05-examen.md  modulo-06-examen.md  modulo-07-examen.md  modulo-08-examen.md  modulo-09-examen.md  modulo-10-examen.md
evaluaciones/soluciones/: soluciones-completas.md
evaluaciones/tests/: __init__.py  test_generar_certificado.py  test_tracking_progreso.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
modulo-01-fundamentos/: README.md
modulo-01-fundamentos/tema-1-python-estadistica/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md
modulo-01-fundamentos/tema-2-procesamiento-csv/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  REVISION_PEDAGOGICA.md
modulo-01-fundamentos/tema-3-logs-debugging/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  REVISION_PEDAGOGICA.md
modulo-02-sql/: README.md
modulo-02-sql/tema-1-sql-basico/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md  RESUMEN_FINAL_JAR-188.md  RESUMEN_IMPLEMENTACION.md  REVISION_PEDAGOGICA.md
modulo-02-sql/tema-2-sql-intermedio/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md  RESUMEN_IMPLEMENTACION.md  REVISION_PEDAGOGICA.md
modulo-02-sql/tema-3-optimizacion/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md
modulo-03-ingenieria-datos/: README.md
modulo-03-ingenieria-datos/05-proyecto-integrador/: .gitignore  README.md  requirements.txt
modulo-03-ingenieria-datos/tema-1-conceptos-etl/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  REVISION_PEDAGOGICA.md
modulo-03-ingenieria-datos/tema-2-extraccion/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md  REVISION_PEDAGOGICA.md
modulo-03-ingenieria-datos/tema-3-transformacion/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  REVISION_PEDAGOGICA.md
modulo-03-ingenieria-datos/tema-4-calidad-datos/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  REVISION_PEDAGOGICA.md
modulo-03-ingenieria-datos/tema-5-formatos-modernos/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md
modulo-03-ingenieria-datos/tema-6-carga-pipelines/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md
modulo-04-apis-scraping/: README.md
modulo-04-apis-scraping/tema-1-apis-rest/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md  REVISION_PEDAGOGICA.md
modulo-04-apis-scraping/tema-2-web-scraping/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md  REVISION_PEDAGOGICA.md
modulo-04-apis-scraping/tema-3-rate-limiting-caching/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md  REVISION_PEDAGOGICA.md
modulo-05-bases-datos-avanzadas/: README.md
modulo-05-bases-datos-avanzadas/tema-1-postgresql-avanzado/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md
modulo-05-bases-datos-avanzadas/tema-2-mongodb/: 01-TEORIA.md  02-EJEMPLOS.md  03-EJERCICIOS.md  README.md
modulo-05-bases-datos-avanzadas/tema-3-modelado-datos/: 01-TEORIA.md  (+3 more)
modulo-07-cloud/: README.md
modulo-08-data-warehousing/: CHANGELOG.md  README.md
modulo-09-spark-big-data/: README.md
modulo-10-ml-para-data-engineers/: README.md
proyecto-final/: README.md  requirements.txt
scripts/: README.md  add_navigation_links.py  setup_linux.sh  setup_mac.sh  setup_windows.ps1
tests/: __init__.py  test_placeholder.py
(+578 files in other folders)
